# iaeml

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build.py  pyproject.toml  searchindex.js  tox.ini
.circleci/: config.yml
_sources/: index.rst.txt
docs/: conf.py  index.rst
docs/source/: conf.py
iaeml/: example.c  example.pyx
iaeml/pure_python/data_structures/: kdtree.py
iaeml/pure_python/distances/: __init__.py  base.py
iaeml/pure_python/ml/: __init__.py
tests/unit/: test_example.py
